--- a/orders/package.json
+++ b/orders/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --no-cache --runInBand --detectOpenHandles",
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
