--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -1,9 +1,11 @@
 name: tests-payments
-on: 
-  pull_request
-  
+on:
+  pull_request:
+    paths:
+      - 'payments/**'
+
 jobs:
-  build:  
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
