--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,12 +1,12 @@
 name: tests-auth
-on: 
-  pull_request
-  
+on:
+  pull_request:
+    paths:
+      - 'auth/**'
+
 jobs:
-  build:  
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: cd auth && npm install && npm run test:ci
-        
-        
