--- a/orders/package.json
+++ b/orders/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --watchAll --no-cache --runInBand --detectOpenHandles",
     "start": "ts-node-dev --poll src/index.ts",
-    "test:ci": "jest --runInBand --detectOpenHandles"
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
