--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -12,10 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd auth && docker build -t sarthakjha/auth .
+      # logging into docker and pushing image
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       - run: docker push sarthakjha/auth
+      # installing doctl to update the cluster
+      - uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{secrets.DO_ACCESS_TOKEN}}
+      # giving cluster connection context to rollout update
+      - run: doctl kubernetes cluster kubeconfig save k8s-ticketing
+        # rolling out new auth deploymemt
+      - run: kubectl rollout restart deployment auth-depl
     
     
