--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -18,6 +18,7 @@ jobs:
       # giving cluster connection context to rollout update
       - run: doctl kubernetes cluster kubeconfig save k8s-ticketing
       # applying files
-      - run: kubectl apply -f infra/k8s
+      - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
+        
     
    
