--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -4,9 +4,11 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
+    # CHANGE ticketing.dev AFTER PURCHASING ACTUAL DOMAIN
+    # ticketing.dev will only work locally (dev environment)
     - host: ticketing.dev
       http:
         paths:
