--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -1,24 +1,21 @@
 name: deploy-manifests
-on: 
+on:
   push:
-    branches: 
+    branches:
       - master
     paths:
-      - 'infra/**'
-      
+      - "infra/**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       # installing doctl to update the cluster
-      - uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{secrets.DO_ACCESS_TOKEN}}
-      # giving cluster connection context to rollout update
-      - run: doctl kubernetes cluster kubeconfig save k8s-ticketing
-      # applying files
-      - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
-        
-    
-   
+      # - uses: digitalocean/action-doctl@v2
+      #   with:
+      #     token: ${{secrets.DO_ACCESS_TOKEN}}
+      # # giving cluster connection context to rollout update
+      # - run: doctl kubernetes cluster kubeconfig save k8s-ticketing
+      # # applying files
+      # - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
