--- a/expiration/package.json
+++ b/expiration/package.json
@@ -18,18 +18,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ticketingsarthak/common": "^1.0.16",
+    "@ticketingsarthak/common": "^1.0.22",
     "@types/bcrypt": "^3.0.0",
-    "@types/bull": "^3.14.4",
+    "@types/bull": "^3.15.0",
     "bcrypt": "^5.0.0",
-    "bull": "^3.18.1",
+    "bull": "^3.20.1",
     "node-nats-streaming": "^0.3.2",
-    "ts-node-dev": "^1.0.0-pre.51",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^3.9.6"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.5",
+    "@types/jest": "^26.0.20",
     "jest": "^26.1.0",
-    "ts-jest": "^26.1.3"
+    "ts-jest": "^26.5.0"
   }
 }
