--- a/orders/package.json
+++ b/orders/package.json
@@ -19,33 +19,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ticketingsarthak/common": "^1.0.18",
+    "@ticketingsarthak/common": "^1.0.22",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "2.0.39",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.7",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.32",
+    "@types/mongoose": "^5.10.3",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.6.0",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.24",
+    "mongoose": "^5.11.15",
     "mongoose-update-if-current": "^1.4.0",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.51",
-    "typescript": "^3.9.6"
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.5",
+    "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.1.0",
-    "mongodb-memory-server": "^6.9.0",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.3",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.3"
+    "ts-jest": "^26.5.0"
   }
 }
