--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -30,6 +30,7 @@ kind: Service
 metadata:
   name: auth-srv
 spec:
+# will act as "service" for all pods named auth
   selector:
     app: auth
   ports:
